<?xml version="1.0" encoding="UTF-8"?>
<resources>

    <string name="app_id_admob">ca-app-pub-4701981589622742~7388768318</string>
    <string name="interstitial_id_main_screen">ca-app-pub-4701981589622742/8865501513</string>

    <string name="slogan">measure your time productivity</string>
    <string name="about_tour">"Product tour"</string>
    <string name="about_contributors">"Contributors"</string>
    <string name="about_donate">"Donate to support updates and more quality apps."</string>
    <string name="about_feedback">"Send Feedback"</string>
    <string name="about_licences">"Licences"</string>
    <string name="about_no_email">"There is no email client installed."</string>
    <string name="about_rate">"Rate this app"</string>
    <string name="about_something_wrong">"Something went wrong."</string>
    <string name="about_support">"Support the developer"</string>
    <string name="about_version">"Version"</string>
    <string name="action_about">"Help"</string>
    <string name="action_view_more">"View More"</string>
    <string name="action_invite">"Share / Invite"</string>
    <string name="action_settings">"Settings"</string>
    <string name="action_translate">"Translate this app"</string>
    <string name="dialog_break_message">"Break complete"</string>
    <string name="dialog_break_session">"Begin session"</string>
    <string name="dialog_reset_cancel">"Cancel"</string>
    <string name="dialog_reset_message">"The completed sessions counter will be reset."</string>
    <string name="dialog_reset_ok">"OK"</string>
    <string name="dialog_reset_title">"Reset sessions counter?"</string>
    <string name="dialog_session_break">"Start break"</string>
    <string name="dialog_session_cancel">"Cancel"</string>
    <string name="dialog_session_close">"Close"</string>
    <string name="dialog_session_message">"Session complete"</string>
    <string name="dialog_session_skip">"Skip break"</string>
    <string name="intro_avoid_distractions">"Avoid distractions"</string>
    <string name="intro_avoid_distractions_description">"Keep your work on track using timed sessions handled by the app."</string>
    <string name="intro_clear_mind">"Clear your mind"</string>
    <string name="intro_clear_mind_description">"Reward yourself with short breaks and get refreshed."</string>
    <string name="intro_get_started">"Get started"</string>
    <string name="intro_get_started_description">"Stay focused, get rid of procrastination and improve your productivity."</string>
    <string name="invitation_cta">"Install"</string>
    <string name="invitation_message">"Try the Time Watcher app to measure and increase your time productivity!"</string>
    <string name="invitation_title">"Send app invitation"</string>
    <string name="notification_break">"Break session is in progress."</string>
    <string name="notification_break_complete">"Break is complete. Resume work?"</string>
    <string name="notification_pause">"Work session is paused. Resume?"</string>
    <string name="notification_session">"Work session is in progress."</string>
    <string name="notification_work_complete">"Session is complete. Continue?"</string>
    <string name="pause">"PAUSE"</string>
    <string name="play_intro">"A pomodoro timer designed to keep you on track and free of distractions."</string>
    <string name="pref_break_duration">"Break duration"</string>
    <string name="pref_continuous_mode">"Continuous mode"</string>
    <string name="pref_counter">"Session counter"</string>
    <string name="pref_disable_sound">"Disable sound and vibration"</string>
    <string name="pref_disable_wifi">"Disable Wi-Fi"</string>
    <string name="pref_fullscreen">"Fullscreen mode"</string>
    <string name="pref_grant_permission">"Click to grant permission"</string>
    <string name="pref_header_general">"Sessions"</string>
    <string name="pref_header_modes">"During work sessions"</string>
    <string name="pref_header_notification">"General"</string>
    <string name="pref_keep_screen_on">"Keep the screen ON"</string>
    <string name="pref_landscape">"Landscape mode"</string>
    <string name="pref_long_break_duration">"Long break duration"</string>
    <string name="pref_ringtone">"Notification sound"</string>
    <string name="pref_ringtone_summary">"Set the notification sound"</string>
    <string name="pref_session_duration">"Work session duration"</string>
    <string name="pref_sessions_for_long_break">"Sessions before long break"</string>
    <string name="pref_unit_minutes">"minutes"</string>
    <string name="pref_unit_sessions">"sessions"</string>
    <string name="pref_vibrate">"Vibration"</string>
    <string name="resume">"RESUME"</string>
    <string name="start_label">"Tap above to start Timer"</string>
    <string name="stop">"STOP"</string>
    <string name="stop_label">"Tap here to stop/reset Timer"</string>
    <string name="toast_back_press">"Press the back button again to exit"</string>
    <string name="toast_google_services_missing">"Please update Google Play Services"</string>
    <string name="help">Help</string>
</resources>
